--- a/src/main/resources/assets/graphic-qol/lang/en_us.json
+++ b/src/main/resources/assets/graphic-qol/lang/en_us.json
@@ -10,7 +10,7 @@
   "gui.graphical-qol.config.description.disable_nether_fog" : "Disables/Enables Nether Fog",
 
   "gui.graphical-qol.config.disable_overworld_fog" : "Disable Overworld Fog",
-  "gui.graphical-qol.config.description.disable_overworld_fog" : "Disables/Enables Overworld Fog",
+  "gui.graphical-qol.config.description.disable_overworld_fog" : "Disables/Enables Overworld Fog.\nIn combination with Sodium, if enabled, causes the rendering of all chunks inside the max server render distance (essentially turns off fog culling). As a result, this may impact performance. This cannot be changed",
 
   "gui.graphical-qol.config.disable_end_fog" : "Disable End Fog",
   "gui.graphical-qol.config.description.disable_end_fog" : "Disables/Enables End Fog",
@@ -18,12 +18,18 @@
   "gui.graphical-qol.config.disable_underwater_fog" : "Disable Underwater Fog",
   "gui.graphical-qol.config.description.disable_underwater_fog" : "Disables/Enables Underwater Fog",
 
+  "gui.graphical-qol.config.disable_powder_snow_fog" : "Disable Powder Snow Fog",
+  "gui.graphical-qol.config.description.disable_powder_snow_fog" : "Disables/Enables Powder Snow Fog",
+
+  "gui.graphical-qol.config.disable_lava_fog" : "Disable Lava Fog",
+  "gui.graphical-qol.config.description.disable_lava_fog" : "Disables/Enables Lava Fog",
+
   "gui.graphical-qol.config.gamma_correction" : "Gamma Correction",
   "gui.graphical-qol.config.description.gamma_correction" : "Corrects the default Gamma value with a given percentage",
 
-  "gui.graphical-qol.config.disable_blindness" : "Disabled Blindness Effect",
-  "gui.graphical-qol.config.description.disable_blindness" : "Disable the darkening caused by the Blindness effect",
+  "gui.graphical-qol.config.disable_blindness" : "Disable Blindness Effect",
+  "gui.graphical-qol.config.description.disable_blindness" : "Disable the darkening caused by the Blindness effect.\nThis may be bannable on Servers",
 
-  "gui.graphical-qol.config.disable_darkness" : "Disabled Darkness Effect",
-  "gui.graphical-qol.config.description.disable_darkness" : "Disable the darkening caused by the Darkness effect"
+  "gui.graphical-qol.config.disable_darkness" : "Disable Darkness Effect",
+  "gui.graphical-qol.config.description.disable_darkness" : "Disable the darkening caused by the Darkness effect.\nThis may be bannable on Servers"
 }
