--- a/src/main/resources/assets/graphic-qol/lang/en_us.json
+++ b/src/main/resources/assets/graphic-qol/lang/en_us.json
@@ -5,6 +5,7 @@
 
   "gui.graphical-qol.config.category.player" : "Player",
   "gui.graphical-qol.config.title.effects" : "Effects",
+  "gui.graphical-qol.config.title.particles" : "Particles",
 
   "gui.graphical-qol.config.disable_nether_fog" : "Disable Nether Fog",
   "gui.graphical-qol.config.description.disable_nether_fog" : "Disables/Enables Nether Fog",
@@ -31,5 +32,8 @@
   "gui.graphical-qol.config.description.disable_blindness" : "Disable the darkening caused by the Blindness effect.\nThis may be bannable on Servers",
 
   "gui.graphical-qol.config.disable_darkness" : "Disable Darkness Effect",
-  "gui.graphical-qol.config.description.disable_darkness" : "Disable the darkening caused by the Darkness effect.\nThis may be bannable on Servers"
+  "gui.graphical-qol.config.description.disable_darkness" : "Disable the darkening caused by the Darkness effect.\nThis may be bannable on Servers",
+
+  "gui.graphical-qol.config.particle_multiplier" : "Particle Multiplier",
+  "gui.graphical-qol.config.description.particle_multiplier" : "Multiplies the amount of particles summoned by the given amount.\nThis heavily affects performance if set too high!"
 }
